--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules
 .env
 pnpm-lock.yaml
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+build
 # dependencies
 /node_modules
 /.pnp
