--- a/web-client-angular/vercel.json
+++ b/web-client-angular/vercel.json
@@ -1,11 +1,16 @@
 {
   "version": 2,
-  "public": true,
-  "name": "web-client-angular",
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
-  "functions": {
-    "api/index.js": {
-      "includeFiles": "dist/web-client-angular/browser/**"
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.js"
+    }
+  ],
+  "includeFiles": ["dist/**/*"]
 }
