--- a/web-client-angular/vercel.json
+++ b/web-client-angular/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node",
-      "files": ["dist/browser/**/*"]
+      "use": "@vercel/node"
     }
   ],
   "routes": [
