--- a/web-client-angular/package.json
+++ b/web-client-angular/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:web-client-angular": "node dist/web-client-angular/server/server.mjs",
-    "vercel-build": "npm run build:ssr"
+    "vercel-build": "npm run build && serve:ssr:web-client-angular"
   },
   "private": true,
   "dependencies": {
