Remove vercel build

--- a/web-client-angular/package.json
+++ b/web-client-angular/package.json
@@ -8,8 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:web-client-angular": "node dist/web-client-angular/server/server.mjs",
-    "vercel-build": "npm run build && serve:ssr:web-client-angular"
+    "serve:ssr:web-client-angular": "node dist/web-client-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
