--- a/web-client-angular/package.json
+++ b/web-client-angular/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-client-angular",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --host 0.0.0.0",
