--- a/web-client-angular/vercel.json
+++ b/web-client-angular/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "api/index.mjs",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "prebuild": "npm run build"
     }
   ],
   "routes": [
