import fs from 'fs';

--- a/web-client-angular/vercel.json
+++ b/web-client-angular/vercel.json
@@ -5,8 +5,7 @@
   "builds": [
     {
       "src": "api/index.mjs",
-      "use": "@vercel/node",
-      "prebuild": "npm run build"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
