--- a/web-client-angular/vercel.json
+++ b/web-client-angular/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "framework": "angular",
   "installCommand": "npm install",
   "buildCommand": "npm run build",
   "builds": [
