--- a/web-client-angular/package.json
+++ b/web-client-angular/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-client-angular",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --host 0.0.0.0",
@@ -45,5 +44,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.2.2"
-  }
+  },
+  "type": "module"
 }
