--- a/web-client-angular/.gitignore
+++ b/web-client-angular/.gitignore
@@ -1,5 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+environment.production.ts
+environment.development.ts
 # Compiled output
 /dist
 /tmp
