--- a/web-client-angular/package.json
+++ b/web-client-angular/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "dev": "ng serve --host 0.0.0.0",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:web-client-angular": "node dist/web-client-angular/server/server.mjs"
